# chemrxiv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
.github/workflows/: tests.yml
chemrxiv/: author.py  result.py  search.py
examples/: basic_usage.ipynb
